set(FBCTools_source_dir ${PROJECT_SOURCE_DIR}/../engines_gpl/fbc/packages/FBCTools/)

configure_file(${FBCTools_source_dir}/src/FBCTools.sh.in ${PROJECT_SOURCE_DIR}/src/FBCTools.sh)

install(PROGRAMS ${FBC_EXECUTABLE_HELPER_FILES} DESTINATION bin)  
install(PROGRAMS ${FBC_THIRDPARTY_x64_FILES} DESTINATION lib)


install(SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/install_and_bundle.cmake")
set(CPACK_PACKAGE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/../package")
set(CPACK_VERBATIM_VARIABLES YES)
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "D-Feedback Control")
set(CPACK_PACKAGE_VENDOR "Deltares 2020")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${FBCTools_source_dir}/ReadMe.txt")
set(CPACK_RESOURCE_FILE_LICENSE "${FBCTools_source_dir}/Copyright.txt")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_GENERATOR "STGZ;TGZ")
include(CPack)
