#-------------------------------------------------------------------------------
#   Makefile
#
#   Copyright (C)  Stichting Deltares, 2011-2018.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
#-------------------------------------------------------------------------------
#Includes
dist_pkgdata_DATA = \
	RTC.DAT \
	RTC.FNM \
	RTC.LNG \
	RTC.RTN
